B-F Sandbox Full-Backup/src/objects/Salesforce_Picklist_Controlling_Values__c.object
<CustomObject>
    <fields>
        <fullName>Controller_Value__c</fullName>
        <label>Controller Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Controller__c</fullName>
        <label>Controller</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Salesforce Picklist Controlling Values</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SPCV-{0}</displayFormat>
        <label>Salesforce Picklist Controlling Values N</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Salesforce Picklist Controlling Values</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>